add callback demo code
