# api/openapi.yaml
@@ -60,7 +60,8 @@ paths:
       summary: 获取Token
       tags:
       - oauth
-      x-accepts: '*/*'
+      x-accepts:
+      - '*/*'
   /oauth2/userInfo:
     get:
       description: 获取用户信息
@@ -87,7 +88,8 @@ paths:
       summary: 获取用户信息
       tags:
       - oauth
-      x-accepts: application/json;charset=UTF-8
+      x-accepts:
+      - application/json;charset=UTF-8
     post:
       description: 获取用户信息
       operationId: getUserInfo_1
@@ -116,7 +118,48 @@ paths:
       summary: 获取用户信息
       tags:
       - oauth
-      x-accepts: application/json;charset=UTF-8
+      x-accepts:
+      - application/json;charset=UTF-8
+  /sw/api/v1/code/demoback:
+    post:
+      description: 用户调用测试，业务系统无需调用
+      operationId: demoback
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CallbackData'
+        description: data
+        required: true
+      responses:
+        "200":
+          content:
+            '*/*':
+              schema:
+                type: string
+          description: OK
+        "201":
+          content: {}
+          description: Created
+        "401":
+          content: {}
+          description: Unauthorized
+        "403":
+          content: {}
+          description: Forbidden
+        "404":
+          content: {}
+          description: Not Found
+      security:
+      - Authorization:
+        - global
+      summary: 回到函数示例
+      tags:
+      - operator
+      x-codegen-request-body-name: data
+      x-content-type: application/json
+      x-accepts:
+      - '*/*'
   /sw/api/v1/code/request:
     post:
       description: 请求下发验证码接口
@@ -154,8 +197,9 @@ paths:
       tags:
       - operator
       x-codegen-request-body-name: request
-      x-contentType: application/json
-      x-accepts: '*/*'
+      x-content-type: application/json
+      x-accepts:
+      - '*/*'
   /sw/api/v1/code/verify:
     post:
       description: 请求校验验证码接口
@@ -193,8 +237,9 @@ paths:
       tags:
       - operator
       x-codegen-request-body-name: verify
-      x-contentType: application/json
-      x-accepts: '*/*'
+      x-content-type: application/json
+      x-accepts:
+      - '*/*'
   /user/api/v1/balance:
     post:
       description: 获取用户余额
@@ -224,7 +269,8 @@ paths:
       summary: 获取用户余额
       tags:
       - balance
-      x-accepts: '*/*'
+      x-accepts:
+      - '*/*'
 components:
   schemas:
     Balance:
@@ -246,6 +292,35 @@ components:
         voucher:
           type: number
       title: Balance
+      type: object
+    CallbackData:
+      example:
+        param: param
+        channel: channel
+        mobile: mobile
+        error: error
+        status: fail
+      properties:
+        channel:
+          type: string
+        error:
+          description: 当回调状态显示失败时显示
+          type: string
+        mobile:
+          type: string
+        param:
+          type: string
+        status:
+          enum:
+          - fail
+          - success
+          type: string
+      required:
+      - channel
+      - mobile
+      - param
+      - status
+      title: CallbackData
       type: object
     CodeRequest:
       example:
@@ -315,7 +390,7 @@ components:
       type: object
     HttpEntity:
       example:
-        body: '{}'
+        body: "{}"
       properties:
         body:
           properties: {}
