# src/main/java/xin/juhe/operator/model/CodeVerify.java
@@ -14,20 +14,41 @@
 package xin.juhe.operator.model;
 
 import java.util.Objects;
-import java.util.Arrays;
 import com.google.gson.TypeAdapter;
 import com.google.gson.annotations.JsonAdapter;
 import com.google.gson.annotations.SerializedName;
 import com.google.gson.stream.JsonReader;
 import com.google.gson.stream.JsonWriter;
-import io.swagger.annotations.ApiModel;
-import io.swagger.annotations.ApiModelProperty;
 import java.io.IOException;
+import java.util.Arrays;
+
+import com.google.gson.Gson;
+import com.google.gson.GsonBuilder;
+import com.google.gson.JsonArray;
+import com.google.gson.JsonDeserializationContext;
+import com.google.gson.JsonDeserializer;
+import com.google.gson.JsonElement;
+import com.google.gson.JsonObject;
+import com.google.gson.JsonParseException;
+import com.google.gson.TypeAdapterFactory;
+import com.google.gson.reflect.TypeToken;
+import com.google.gson.TypeAdapter;
+import com.google.gson.stream.JsonReader;
+import com.google.gson.stream.JsonWriter;
+import java.io.IOException;
+
+import java.util.HashMap;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
+
+import xin.juhe.operator.JSON;
 
 /**
  * CodeVerify
  */
-@javax.annotation.Generated(value = "org.openapitools.codegen.languages.JavaClientCodegen", date = "2024-09-04T19:48:05.711681+08:00[Asia/Shanghai]")
+@javax.annotation.Generated(value = "org.openapitools.codegen.languages.JavaClientCodegen", date = "2024-09-05T11:11:18.748484+08:00[Asia/Shanghai]", comments = "Generator version: 7.8.0")
 public class CodeVerify {
   public static final String SERIALIZED_NAME_CODE = "code";
   @SerializedName(SERIALIZED_NAME_CODE)
@@ -37,23 +58,22 @@ public class CodeVerify {
   @SerializedName(SERIALIZED_NAME_ORDER_ID)
   private String orderId;
 
+  public CodeVerify() {
+  }
 
   public CodeVerify code(String code) {
-    
     this.code = code;
     return this;
   }
 
-   /**
+  /**
    * Get code
    * @return code
-  **/
-  @ApiModelProperty(required = true, value = "")
-
+   */
+  @javax.annotation.Nonnull
   public String getCode() {
     return code;
   }
-
 
   public void setCode(String code) {
     this.code = code;
@@ -61,25 +81,23 @@ public class CodeVerify {
 
 
   public CodeVerify orderId(String orderId) {
-    
     this.orderId = orderId;
     return this;
   }
 
-   /**
+  /**
    * Get orderId
    * @return orderId
-  **/
-  @ApiModelProperty(required = true, value = "")
-
+   */
+  @javax.annotation.Nonnull
   public String getOrderId() {
     return orderId;
   }
 
-
   public void setOrderId(String orderId) {
     this.orderId = orderId;
   }
+
 
 
   @Override
@@ -99,7 +117,6 @@ public class CodeVerify {
   public int hashCode() {
     return Objects.hash(code, orderId);
   }
-
 
   @Override
   public String toString() {
@@ -122,5 +139,105 @@ public class CodeVerify {
     return o.toString().replace("\n", "\n    ");
   }
 
+
+  public static HashSet<String> openapiFields;
+  public static HashSet<String> openapiRequiredFields;
+
+  static {
+    // a set of all properties/fields (JSON key names)
+    openapiFields = new HashSet<String>();
+    openapiFields.add("code");
+    openapiFields.add("orderId");
+
+    // a set of required properties/fields (JSON key names)
+    openapiRequiredFields = new HashSet<String>();
+    openapiRequiredFields.add("code");
+    openapiRequiredFields.add("orderId");
+  }
+
+  /**
+   * Validates the JSON Element and throws an exception if issues found
+   *
+   * @param jsonElement JSON Element
+   * @throws IOException if the JSON Element is invalid with respect to CodeVerify
+   */
+  public static void validateJsonElement(JsonElement jsonElement) throws IOException {
+      if (jsonElement == null) {
+        if (!CodeVerify.openapiRequiredFields.isEmpty()) { // has required fields but JSON element is null
+          throw new IllegalArgumentException(String.format("The required field(s) %s in CodeVerify is not found in the empty JSON string", CodeVerify.openapiRequiredFields.toString()));
+        }
+      }
+
+      Set<Map.Entry<String, JsonElement>> entries = jsonElement.getAsJsonObject().entrySet();
+      // check to see if the JSON string contains additional fields
+      for (Map.Entry<String, JsonElement> entry : entries) {
+        if (!CodeVerify.openapiFields.contains(entry.getKey())) {
+          throw new IllegalArgumentException(String.format("The field `%s` in the JSON string is not defined in the `CodeVerify` properties. JSON: %s", entry.getKey(), jsonElement.toString()));
+        }
+      }
+
+      // check to make sure all required properties/fields are present in the JSON string
+      for (String requiredField : CodeVerify.openapiRequiredFields) {
+        if (jsonElement.getAsJsonObject().get(requiredField) == null) {
+          throw new IllegalArgumentException(String.format("The required field `%s` is not found in the JSON string: %s", requiredField, jsonElement.toString()));
+        }
+      }
+        JsonObject jsonObj = jsonElement.getAsJsonObject();
+      if (!jsonObj.get("code").isJsonPrimitive()) {
+        throw new IllegalArgumentException(String.format("Expected the field `code` to be a primitive type in the JSON string but got `%s`", jsonObj.get("code").toString()));
+      }
+      if (!jsonObj.get("orderId").isJsonPrimitive()) {
+        throw new IllegalArgumentException(String.format("Expected the field `orderId` to be a primitive type in the JSON string but got `%s`", jsonObj.get("orderId").toString()));
+      }
+  }
+
+  public static class CustomTypeAdapterFactory implements TypeAdapterFactory {
+    @SuppressWarnings("unchecked")
+    @Override
+    public <T> TypeAdapter<T> create(Gson gson, TypeToken<T> type) {
+       if (!CodeVerify.class.isAssignableFrom(type.getRawType())) {
+         return null; // this class only serializes 'CodeVerify' and its subtypes
+       }
+       final TypeAdapter<JsonElement> elementAdapter = gson.getAdapter(JsonElement.class);
+       final TypeAdapter<CodeVerify> thisAdapter
+                        = gson.getDelegateAdapter(this, TypeToken.get(CodeVerify.class));
+
+       return (TypeAdapter<T>) new TypeAdapter<CodeVerify>() {
+           @Override
+           public void write(JsonWriter out, CodeVerify value) throws IOException {
+             JsonObject obj = thisAdapter.toJsonTree(value).getAsJsonObject();
+             elementAdapter.write(out, obj);
+           }
+
+           @Override
+           public CodeVerify read(JsonReader in) throws IOException {
+             JsonElement jsonElement = elementAdapter.read(in);
+             validateJsonElement(jsonElement);
+             return thisAdapter.fromJsonTree(jsonElement);
+           }
+
+       }.nullSafe();
+    }
+  }
+
+  /**
+   * Create an instance of CodeVerify given an JSON string
+   *
+   * @param jsonString JSON string
+   * @return An instance of CodeVerify
+   * @throws IOException if the JSON string is invalid with respect to CodeVerify
+   */
+  public static CodeVerify fromJson(String jsonString) throws IOException {
+    return JSON.getGson().fromJson(jsonString, CodeVerify.class);
+  }
+
+  /**
+   * Convert an instance of CodeVerify to an JSON string
+   *
+   * @return JSON string
+   */
+  public String toJson() {
+    return JSON.getGson().toJson(this);
+  }
 }
 
